--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,8 +4,7 @@ description: attach_rpi_to_lego description
 version: 4
 listed: false
 copyedit: false
+ingedient: true
 last_tested: "2020-03-23"
 steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Attaching a Raspberry Pi to LEGO
