--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: attach_rpi_to_lego
+title: Attach a Raspberry Pi and Build HAT to LEGO®
 hero_image: images/banner.png
-description: attach_rpi_to_lego description
+description: Attach a Raspberry Pi Build HAT to LEGO®
 version: 4
 listed: false
 copyedit: false
